elastic/elastic/ingress-kafka-ui-log.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-log
  labels:
    name: kafka-ui-log
spec:
  rules:
  - host: kafka-ui-log.seedslabs.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kafka-ui-log
            port: 
              number: 8080
