elastic/elastic/ingress-traefik-ui.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ui
  namespace: seeds-uat
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik-ui.seedslabs.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: traefik
            port: 
              number: 80
